# algorithms

./: README.md
python/: main.py  pyproject.toml  run.sh
python/src/: main.py
python/src/structures/: Data.py  LinkedList.py
typescript/: main.ts  package-lock.json  package.json  tsconfig.json
typescript/src/: main.ts
typescript/src/structures/: Data.ts  LinkedList.ts  index.ts
